# SofaStudio

./: CMakeLists.txt  LICENSE  LOG.md  O-QUE-E.md  README.md  ROTEIRO.md  RUN.sh
.codex/environments/: environment.toml
addons/postgres/: SofaAddonPostgres.cpp  SofaAddonPostgres.h
apps/desktop/: CMakeLists.txt  main.cpp
apps/desktop/qml/: Main.qml
docs/: 00-index.md  01-architecture-overview.md  01-getting-started.md  02-core-concepts.md  03-ui-system.md  05-postgres-addon.md  07-datagrid-engine.md
src/core/: AddonHost.cpp  AddonHost.h  AppContext.cpp  AppContext.h  CMakeLists.txt  ILocalStoreService.h  LocalStoreService.cpp  LocalStoreService.h  QueryWorker.cpp  QueryWorker.h
src/core/addons/: IAddon.h
src/core/udm/: UDM.h
src/datagrid/: DataGridEngine.cpp  DataGridEngine.h  DataGridView.cpp  DataGridView.h
src/ui/: AppButton.qml  AppHeader.qml  AppMenu.qml  AppSidebar.qml  AppTabs.qml  AppTextField.qml  CMakeLists.txt  ColumnEditorModal.qml  ConnectionDialog.qml  ConnectionForm.qml  ConnectionSelectorModal.qml  DataGrid.qml  DatabaseExplorer.qml  IndexEditorModal.qml  PostgresDdl.js  RowEditorModal.qml  SqlConsole.qml  SqlSyntaxHighlighter.cpp  SqlSyntaxHighlighter.h  TableIndexesView.qml  Theme.qml
src/ui/assets/: SofaAppIcon.icns  Ícone.icns
